- Improvement: Propagation modes are now sorted in the Propagation mode combobox.
- Improvement: Four new tips added.
- Improvement: eQSL & LoTW dates are updated always that are modified to any status.
- Improvement: If a QSO does not have a freq, a default freq based on the band is assigned if edited.
- Improvement: Removed some deprecated functions.
- Removed the functionality to sort the log based on Date & Time columns.
- Removed one console message about a duplicated database connection.
- Bugfix: It was not possible to include new dxcluster servers in the setup.
- Bugfix: The default value of RST in some digital modes using SNR were not properly shown.
- Bugfix: In translated instances of KLog, Propagation mode was sometimes not properly saved when no propagation mode eas selected.
- BugFix: Locator in SAT widget was not always not correctly evaluated as correct.
- Updated translations: Catalan (TNX Txema), Croatian (TNX M0NKC), Finnish (TNX Kristjan), Spanish (EA4K).

February 2020 - 0.9.9.1
- BugFix: Bands & modes where sometimes duplicated in the combobox (TNX G4MKT).

January 2020 - 0.9.9
- UI: Created a widget to manage the Awards to make KLog more modular.
- UI: When starting a new version for the first time, the splashscreen is not hidding other messages anymore.
- UI: Removed some not used File menus (New, Open, Save & Save As).
- UI: Sorting by date the log is also sorting taking into account the time.
- New versions are now found depending on the OS, not just for the sources.
- New feature: Added some tips in the Help menu to help the users to get the most of KLog.
- Hamlib has now a read-only mode that will read freq & mode from the radio but will never modify/update anything in the radio.
- Added some debug log option.
- Some code cleaning with cppcheck and compilation warnings removed.
- UI: Added a WSJT-X like color schema.
- Bugfix: KLog was crashing if the call was completely removed in the Setup.